# calendar-ui

./: Cargo.toml  xcompile.sh
public/: index.html
public/js/: dexie.min.js
src/: main.rs
