[package]
name = "calendar-ui"
version = "0.1.0"
authors = ["Bryant Deters <bryantdeters@gmail.com>"]

[dependencies]
actix-web = "0.7"
rust-embed = "3.0.0"
mime_guess = "1.8.6"

##JSON DEPS
#"json" = "*"
#"serde_derive" = "*"
#"serde" = "*"
##"serde" = "1.0.69"
#"serde_json" = "*"
##"serde_json" = "1.0.23"
